<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="violation"
            type="com.guavas.cz3002.data.violation.Violation" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViolation"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/content_desc_violation_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/imageToiletGender"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_desc_toilet_gender"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViolation"
                tools:src="@drawable/male_toilet" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:constraint_referenced_ids="buttonApprove,buttonReject" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_approve"
                app:layout_constraintEnd_toStartOf="@id/buttonReject"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageToiletGender" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonReject"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reject"
                app:layout_constraintBottom_toBottomOf="@id/buttonApprove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonApprove"
                app:layout_constraintTop_toTopOf="@id/buttonApprove" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonApprove"
                tools:text="47 minutes ago" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>