<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.guavas.cz3002.ui.violation.ViolationsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:transitionGroup="true"
        tools:context=".ui.violation.ViolationsFragment">

        <androidx.constraintlayout.widget.Group
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="imageInfo,labelNotAssignedBody,labelNotAssignedTitle"
            app:isVisible="@{!fragment.viewModel.isAssignedLocation &amp;&amp; !fragment.viewModel.isLoading}" />

        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_desc_ic_info"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toTopOf="@id/labelNotAssignedTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="?attr/colorOnSurface" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelNotAssignedTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_no_task_title"
            app:layout_constraintBottom_toTopOf="@id/labelNotAssignedBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageInfo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelNotAssignedBody"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_no_task_body"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelNotAssignedTitle" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:isVisible="@{fragment.viewModel.isLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="?attr/colorSecondary"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_circle" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="imageLocation,textLocation,recyclerViewViolations,switchFalsePositive"
            app:isVisible="@{fragment.viewModel.isAssignedLocation &amp;&amp; !fragment.viewModel.isLoading}" />

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="24dp"
            android:layout_height="0dp"
            android:contentDescription="@string/content_desc_ic_location"
            android:src="@drawable/ic_location"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textLocation"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{fragment.viewModel.assignedLocation}"
            app:layout_constraintBottom_toBottomOf="@id/imageLocation"
            app:layout_constraintStart_toEndOf="@id/imageLocation"
            app:layout_constraintTop_toTopOf="@id/imageLocation"
            tools:text="N3-01-01" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewViolations"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:transitionGroup="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLocation" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchFalsePositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_show_rejected"
            app:layout_constraintBottom_toBottomOf="@id/imageLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageLocation"
            app:onCheckedChangeListener="@{(v, c) -> fragment.viewModel.setShowFalsePositive(c)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>